--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the application"
   },
   "appDescription": {
-    "message": "TabCommender provides sensible recommendation based on how You use tabs in Google Chrome.",
+    "message": "Personalized tab actions recommendation.",
     "description": "The description of the application"
   }
 }
