--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the application"
   },
   "appDescription": {
-    "message": "Personalized tab actions recommender based on your browser use.",
+    "message": "Personalized tab actions recommender based on your browser usage.",
     "description": "The description of the application"
   }
 }
