Update app name.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "Tabrec",
+    "message": "TabRec",
     "description": "The name of the application"
   },
   "appDescription": {
